--- a/style.css
+++ b/style.css
@@ -44,10 +44,11 @@ body{
 .doortext{
 	height:325px;
 	width:145px;
-/*	background-color:rgba(255,0,255,0.5);*/
+	background-color:rgba(0,0,0,0.3);
 	margin-top:65px;
 	margin-left:5px;
 	text-align:center;
+	color:white;
 	padding:20px;
 	font-size:1.2em;
 	font-family: Helvetica, Arial, sans-serif;
