--- a/style.css
+++ b/style.css
@@ -55,12 +55,12 @@ body{
 }
 
 .choice{
-	height:60px;
+	height:65px;
 	width:380px;
 	margin-left:10px;
 	margin-top:30px;
 	text-align:center;
-	padding-top:15px;
+	padding-top:10x;
 	font-size:1.2em;
 	font-family: Helvetica, Arial, sans-serif;
 	background-image:url(images/c1.jpg);
