--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
 	margin-left:10px;
 	margin-top:30px;
 	text-align:center;
-	padding-top:10x;
+	padding-top:10px;
 	font-size:1.2em;
 	font-family: Helvetica, Arial, sans-serif;
 	background-image:url(images/c1.jpg);
